# Supervisor

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  macos.json
src-tauri/resources/: Assets.car  Icon.icns  assetcatalog_generated_info.plist
src-tauri/src/: claude_process.rs  commands.rs  db.rs  error.rs  event_router.rs  lib.rs  main.rs  services.rs  session_reader.rs  socket_server.rs  state.rs  tray.rs
src/components/canvas/: AgentCardUnified.tsx  AgentNode.tsx  AgentNodeDeleteDialog.tsx  Canvas.tsx  CanvasContextMenu.tsx  CanvasControls.tsx  EmptyState.tsx  ProjectZone.tsx  SnapGuides.tsx
src/components/chat/: ChatMessage.tsx  ChatView.logic.ts  ChatView.tsx  MessagePreview.tsx  SlashCommandMenu.tsx  (+1 more)
src/contexts/: tauri-drop-context.ts
src/hooks/: use-agent-events.ts  use-agent-send.ts  use-canvas-context-menu.ts  use-canvas-keyboard.ts  use-canvas-positions.ts  use-canvas-zoom.ts  use-notifications.ts  use-snap-guides.ts  use-stable-callback.ts  use-stable.ts  use-tauri-drop.ts
src/lib/: agent-display.ts  notification-constants.ts  project-colors.ts  streaming-buffer.ts
src/stores/: agent-store.ts  layer-store.ts  notification-store.ts  project-store.ts
src/types/: index.ts
(+25 files in other folders)
